crates/rye/tests/ui/compile-fail/params.stderr
error: expected path
 --> $DIR/params.rs:4:15
  |
4 | #[rye(crate = 10)]
  |               ^^

error: unknown parameter name
 --> $DIR/params.rs:8:7
  |
8 | #[rye(the_quick_fox = "lazy")]
  |       ^^^^^^^^^^^^^
